# pyezsh

./: .gitignore  MVP_DEMO.md  README.md  TODO.md  main.py  pyproject.toml
src/pyezsh/: __main__.py  app.py
src/pyezsh/app/: __init__.py  app.py  commands.py  default_commands.py  default_keys.py  keyrouter.py  keys.py
src/pyezsh/core/: __init__.py  logging.py  telemetry.py
src/pyezsh/services/: __init__.py  status.py
src/pyezsh/tests/: test_app.py  test_commands.py  test_component.py  test_content_viewer.py  test_default_commands.py  test_dialogs.py  test_dummy_menus.py  test_keyrouter.py  test_keys.py  test_mainlayout.py  test_menubar.py  test_sidebar_treeview.py  test_statusbar.py  test_telemetry.py
src/pyezsh/ui/: __init__.py  component.py  content_viewer.py  dialogs.py  label.py  mainlayout.py  menu_defs.py  menubar.py  sidebar_treeview.py  statusbar.py
