[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyezsh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"pytest>=9.0.2",
	"ttkthemes>=3.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyezsh"]
